# yolo_track

./: CMakeLists.txt  README.MD  package.xml
include/yolo_track/: servoNode.hpp  sysfsControl.hpp  trackNode.hpp
src/: controlNode.cpp  servoNode.cpp  sysfsControl.cpp  trackNode.cpp
