<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_track</name>
  <version>1.0.0</version>
  <description>Package controls camera tripod head to track objects</description>
  <maintainer email="yzc2004.12@qq.com">YangZhichao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>yolo_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
